[package]
name = "bitwarden-exporter-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bitwarden-exporters = { path = "deps/sdk/crates/bitwarden-exporters", version = "=0.1.0" }
bitwarden-crypto = { path = "deps/sdk/crates/bitwarden-crypto", version = "=0.1.0" }

chrono = { version = ">=0.4.26, <0.5", features = [
    "clock",
    "serde",
    "std",
], default-features = false }
clap = { version = "=4.5", features = ["derive"] }
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0.96, <2.0"
uuid = { version = ">=1.3.3, <2.0", features = ["serde", "v4"] }
